# zoo

./: .gitignore
UI/: CMakeLists.txt  conanfile.py  pyproject.toml
UI/src/: Animal.cpp  Animal.h  Animal.hpp  Animal.qml  Button.qml  JSONtoString.qml  Metadata.cpp  Metadata.hpp  RedSquare.qml  SimpleZooModel.cpp  SimpleZooModel.h  SimpleZooModel.hpp  SimpleZooModel.qml  TextInput.qml  WebPicture.cpp  WebPicture.hpp  animalDatails.qml  dataentrymodel.cpp  dataentrymodel.h  delegate.qml  jsconsole.js  main.cpp  main.qml  mouseArea.qml  zooImage.qml  zooMain.cpp
UI/src /: main.cpp
UI/src/grapgql/: idscalar.hpp  operations.graphql  qtgqlconfig.py  schema.graphql
UI/src/qml_learning/: BlueRec.qml  JSConsole.qml  ListSection.qml  ListViewExample.qml  Repeater.qml  SquareButton.qml  TextInput.qml  dataentrymodel.qml  mainDateModel.cpp  model.qml  myapplication.qml  xml.qml
